@@ -14,14 +14,48 @@ eev-mode keybindings, and open this tutorial,
   (find-eev-quick-intro)
 
 in a sandboxed buffer. For a list of the other sandboxed tutorials,
-run:
+see:
 
+  http://angg.twu.net/eev-intros/find-eev-intro.html
   (find-eev-intro)
 
-For a non-technical description of what e-scripts are, see:
+Note that the URLs point to the HTMLized versions of the sandboxed
+tutorials, and the `(find-*-intro)' sexps open them in Emacs.
+
+For a _non-technical_ description of what e-scripts are, see:
 
   http://angg.twu.net/escripts.html
+
+For an analysis of an e-script that uses most of the main features of
+eev, see:
+
+  http://angg.twu.net/eev-intros/find-escripts-intro.html#4
+  (find-escripts-intro "4. How to read an e-script")
 
 The home page of eev is:
 
   http://angg.twu.net/#eev
+
+
+
+
+
+EEV WITHOUT EEV-MODE
+====================
+Eev mode only activates some keybindings and adds a reminder saying
+"eev" to the mode line, as explained here:
+
+  http://angg.twu.net/eev-intros/find-eev-intro.html#1
+  (find-eev-intro "1. `eev-mode'")
+
+It is possible to use eev's elisp hyperlink functions with eev-mode
+turned off: just put the point on a line with an elisp hyperlink and
+type `C-e C-x C-e'.
+
+If you want to load all the main modules of eev to make its functions
+available in this way, do:
+
+  (require 'eev-load)
+
+then you can use `M-x eev-mode' to toggle eev-mode on and off when
+desired.
