@@ -19,7 +19,7 @@
 ;;
 ;; Author:     Eduardo Ochs <eduardoochs@gmail.com>
 ;; Maintainer: Eduardo Ochs <eduardoochs@gmail.com>
-;; Version:    2019mar05
+;; Version:    2019apr01
 ;; Keywords:   e-scripts
 ;;
 ;; Latest version: <http://angg.twu.net/eev-current/eev-elinks.el>
@@ -64,7 +64,6 @@
 ;; «.find-einfo-links»		(to "find-einfo-links")
 ;; «.find-eintro»		(to "find-eintro")
 
-;; «.ee-code-c-d-pairs-eval»	(to "ee-code-c-d-pairs-eval")
 ;; «.ee-code-c-d-filter»	(to "ee-code-c-d-filter")
 ;; «.ee-find-xxxfile-sexps»	(to "ee-find-xxxfile-sexps")
 ;; «.find-file-links»		(to "find-file-links")
@@ -591,34 +590,49 @@ a hack to let use use `M-h M-i' for both \"intro\" and \"info\"."
 
 
 
-
-;;;                _                          _                   _          
-;;;   ___ ___   __| | ___        ___       __| |      _ __   __ _(_)_ __ ___ 
-;;;  / __/ _ \ / _` |/ _ \_____ / __|____ / _` |_____| '_ \ / _` | | '__/ __|
-;;; | (_| (_) | (_| |  __/_____| (_|_____| (_| |_____| |_) | (_| | | |  \__ \
-;;;  \___\___/ \__,_|\___|      \___|     \__,_|     | .__/ \__,_|_|_|  |___/
-;;;                                                  |_|                     
-;;
-;; «ee-code-c-d-pairs-eval» (to ".ee-code-c-d-pairs-eval")
+;;;                _                          _        __ _ _ _            
+;;;   ___ ___   __| | ___        ___       __| |      / _(_) | |_ ___ _ __ 
+;;;  / __/ _ \ / _` |/ _ \_____ / __|____ / _` |_____| |_| | | __/ _ \ '__|
+;;; | (_| (_) | (_| |  __/_____| (_|_____| (_| |_____|  _| | | ||  __/ |   
+;;;  \___\___/ \__,_|\___|      \___|     \__,_|     |_| |_|_|\__\___|_|   
+;;;                                                                        
 ;; «ee-code-c-d-filter» (to ".ee-code-c-d-filter")
+;; This is a trick to make `find-file-links' generate short hyperlinks.
+;; See: (find-eev-quick-intro "10.1. Generating short hyperlinks to files")
+;;
 ;; Each call to `(code-c-d C D)' generates an entry `(C D)' in the
-;; alist `ee-code-c-d-pairs', and this is used to make
-;; `(find-file-links FNAME)' list short hyperlinks to FNAME. Let's
-;; look at an example:
+;; alist `ee-code-c-d-pairs'. Try:
 ;;
 ;;   (code-c-d "foo"  "/FOO")
 ;;   (code-c-d "bar"  "/FOO/BAR/")
 ;;   (code-c-d "plic" "/FOO/BAR/PLIC/")
+;;   (find-epp ee-code-c-d-pairs)
+;;
+;; You will see that the `ee-code-c-d-pairs' now begins with:
+;;
+;;   (("plic" "/FOO/BAR/PLIC/")
+;;    ("bar" "/FOO/BAR/")
+;;    ("foo" "/FOO")
+;;    ...
+;;    )
+;;
+;; And if you run
+;;
 ;;   (find-file-links "/FOO/BAR/PLIC/ploc")
 ;;
-;; The last links in the `find-file-links' buffer will be:
+;; Then the last links in the `find-file-links' buffer will be:
 ;;
-;;   (find-plicfile "ploc")
-;;   (find-barfile "PLIC/ploc")
+;;   (find-plicfile          "ploc")
+;;   (find-barfile      "PLIC/ploc")
 ;;   (find-foofile "/BAR/PLIC/ploc")
 ;;
-;; The implementation is tricky enough to deserve debug functions.
-;; Try:
+;; They are generated by `ee-find-xxxfile-sexps'. Try:
+;;
+;;   (find-epp (ee-find-xxxfile-sexps "/FOO/BAR/PLIC/ploc"))
+;;
+;; To understand the implementation, try the sexps below. Note that
+;; `find-code-c-d-filter-1' and `find-code-c-d-filter-2' are debugging
+;; functions.
 ;;
 ;;   (find-epp ee-code-c-d-pairs)
 ;;   (find-code-c-d-filter-1 'c-d)
@@ -627,7 +641,6 @@ a hack to let use use `M-h M-i' for both \"intro\" and \"info\"."
 ;;   (find-code-c-d-filter-1 'ed)
 ;;   (find-code-c-d-filter-2 "/FOO/BAR/PLIC/ploc" '(list c fname-))
 ;;   (find-code-c-d-filter-2 "/FOO/BAR/PLIC/ploc" '(ee-intern "find-%sfile" c))
-;;   (find-epp (ee-find-xxxfile-sexps "/FOO/BAR/PLIC/ploc"))
 ;;
 ;; See: (find-evariable 'ee-code-c-d-pairs)
 ;;      (find-elnode "Association Lists")
@@ -639,7 +652,7 @@ Actually return a list of `(F elt)'s."
 
 (defun ee-code-c-d-filter-1 (code)
   "Run CODE on each `c-d' of `ee-code-c-d-pairs' and return a list of results.
-This is a simpler version of `ee-code-c-d-filter-2', used for debugging."
+This is a simpler version of `ee-code-c-d-filter-2', used only for debugging."
   (ee-filter
    (lambda (c-d)
      (let* ((c (car c-d))
@@ -650,7 +663,9 @@ This is a simpler version of `ee-code-c-d-filter-2', used for debugging."
 
 (defun ee-code-c-d-filter-2 (fname code)
   "Run CODE on each `c-d' of `ee-code-c-d-pairs' and return a list of results.
-Only eval CODE when (ee-expand D) is a prefix of (ee-expand FNAME)."
+Only eval CODE when (ee-expand D) is a prefix of (ee-expand FNAME).
+CODE is evaluated inside a `let' that sets the variables `c',
+`d', `ed', `efname', and `fname-'. See the source for their meanings."
   (let ((efname (ee-expand fname)))
     (ee-filter
      (lambda (c-d)
@@ -689,36 +704,15 @@ Only eval CODE when (ee-expand D) is a prefix of (ee-expand FNAME)."
   (ee-replace-prefix0 (ee-expand prefix) newprefix (ee-expand fname)))
 
 (defun ee-intern (fmt &rest args)
+  "The result of (format FMT ARGS), converted to a symbol"
   (intern (apply 'format fmt args)))
-
-;; Renamed to `ee-code-c-d-filter-2'. See above.
-;;
-;; (defun ee-code-c-d-pairs-eval (fname code)
-;;   "For each entry (C D) in `ee-code-c-d-pairs' for which D is a prefix of FNAME,
-;; evaluate f in the context of a big `let', and return the result."
-;;   (let ((efname (ee-expand fname)))
-;;     (ee-filter (lambda (c-d)
-;;                  (let* ((c (car c-d))
-;;                         (d (cadr c-d))
-;;                         (ed (ee-expand d)))
-;;                    (if (ee-prefixp ed efname)
-;;                        (let ((fname- (ee-remove-prefix ed efname)))
-;;                          (eval code)))))
-;;                ee-code-c-d-pairs)))
 
 ;; «ee-find-xxxfile-sexps»  (to ".ee-find-xxxfile-sexps")
 (defun ee-find-xxxfile-sexps (fname)
   "For each (C D) in ee-code-c-d-pairs test if D is a prefix of FNAME;
 when this is true remove the prefix D from FNAME, and put the sexp
 (find-Cfile \"FNAME-\") in the list of results. Return that list."
-  (ee-code-c-d-pairs-eval
-   fname
-   '(list (ee-intern "find-%sfile" c) fname-)))
-
-;; Experimental:
-(defun ee-find-xxxfile-sexps (fname)
-  (;; ee-code-c-d-pairs-eval
-   ee-code-c-d-filter-2
+  (ee-code-c-d-filter-2
    fname
    '(list (ee-intern "find-%sfile" c) fname-)))
 
